--- a/index.html
+++ b/index.html
@@ -39,36 +39,43 @@
 	<div id="panel">
 		<div class="content clearfix">
 			<div class="left">
-				<h1>Welcome to uFQA.org</h1>
-				<h2>Please login</h2>		
-				<p class="grey">To save site inventory and transect FQA studies you will need to create an account.</p>
+				<h1>Welcome to the Universal Floristic Quality Assessment Tool</h1>
+				<h2>Please register:</h2>		
+				<p class="grey">To save site inventory and transect FQA studies, or to upload and share regional FQA databases you will need to create an account.</p>
 			</div>
 			<div class="left">
+				<!-- Register Form -->
+				<form action="#" method="post">
+					<h1>Create an account!</h1>				
+					<label class="grey" for="signup">First name:</label>
+					<input class="field" type="text" name="signup" id="signup" value="" size="23" />
+					<label class="grey" for="signup">Last name:</label>
+					<input class="field" type="text" name="signup" id="signup" value="" size="23" />
+					<label class="grey" for="email">Email:</label>
+					<input class="field" type="text" name="email" id="email" size="23" />
+					<label class="grey" for="pwd">Password:</label>
+					<input class="field" type="password" name="pwd" id="pwd" size="23" />
+					<label class="grey" for="pwd">Password (again):</label>
+					<input class="field" type="password" name="pwd" id="pwd" size="23" />
+					<input type="submit" name="submit" value="Register" class="bt_login" />
+				</form>
+			</div>
+			<div class="left right">	
 				<!-- Login Form -->
 				<form class="clearfix" action="#" method="post">
-					<h1>Login</h1>
-					<label class="grey" for="log">Username:</label>
+					<h1>Already have an account?</h1>
+					<label class="grey" for="log">Email:</label>
 					<input class="field" type="text" name="log" id="log" value="" size="23" />
 					<label class="grey" for="pwd">Password:</label>
 					<input class="field" type="password" name="pwd" id="pwd" size="23" />
         			<div class="clear"></div>
 					<input type="submit" name="submit" value="Login" class="bt_login" />
 					<a class="lost-pwd" href="#">Lost your password?</a>
-				</form>
-			</div>
-			<div class="left right">			
-				<!-- Register Form -->
-				<form action="#" method="post">
-					<h1>Create an account!</h1>				
-					<label class="grey" for="signup">Username:</label>
-					<input class="field" type="text" name="signup" id="signup" value="" size="23" />
-					<label class="grey" for="email">Email:</label>
-					<input class="field" type="text" name="email" id="email" size="23" />
-					<label>A password will be e-mailed to you.</label>
-					<input type="submit" name="submit" value="Register" class="bt_login" />
-				</form>
+				</form>		
+
 			</div>
 		</div>
+
 </div> <!-- /login -->	
 
 	<!-- The tab on top -->	
@@ -96,10 +103,10 @@
 	
 	<br><br><br><br><br>
 	<p style="font-size: 1.3em; line-height: 1.5; margin: 1em 0; width: 600px;">
-	Floristic Quality Assessment (FQA) is a measurement of a natural area's habitat condition or quality.
+	Floristic Quality Assessments (FQAs) are a measurement of a natural area's habitat condition or quality.
 	</p>
 	<p style="font-size: 1.2em; line-height: 1.5; margin: 1em 0; width: 600px;">
-	This tool provides a framework to easily calculate regional FQAs. Regional species lists with coefficients of conservatism may freely be uploaded.
+	This tool provides a framework to calculate FQAs for site inventory and transect studies in any region. Help expand this tool by uploading your region's list of species and their coefficients of conservatism.
 	</p>
 <div style="clear: both;"> </div>
 
@@ -113,7 +120,7 @@
 				<li><a href="#tabs-2">New transect FQA</a></li>
 				<li><a href="#tabs-3">View saved FQAs</a></li>
 				<li><a href="#tabs-4">Compare regional FQA coefficients</a></li>
-				<li><a href="#tabs-5">Download/Upload FQA database</a></li>
+				<li><a href="#tabs-5">Upload/Download regional FQA databases</a></li>
 				<li><a href="#tabs-6">About</a></li>
 			</ul>
 			<div id="tabs-1">
