added about.html and fixed css

--- a/about.html
+++ b/about.html
@@ -28,8 +28,7 @@
           		</button>
           		<a class="brand" href="index.html">Universal FQA</a>
           		<div class="nav-collapse collapse pull-right">
-            		<ul class="nav pull-right">
-              			<li><a href="php/login.php">Login / Register</a></li>
+            		<ul class="nav">
             		</ul>
           		</div>
         	</div>
@@ -43,18 +42,14 @@
 					<img src="images/blue-eyed.jpg">
 				</div>
 				<div class="span9">
-					<img src="images/header4.png">
-					<br><br><br><br><br>
-					<p style="font-size: 1.3em; line-height: 1.5; margin: 1em 0;">
-						Floristic Quality Assessments (FQAs) are a measurement of a natural area's habitat condition or quality.
+					<h1>About this website</h1>
+					<br>
+					<p>
+						The <a href="index.html">Universal Floristic Quality Assessment Tool</a> is an open source project licensed for use under <a href="http://www.gnu.org/licenses/">GPLv3</a>. It is completely free for any user, and is being developed by <a href="http://breadorpyramid.org">Will Freyman</a> with support from <a href="http://openlands.org">Openlands</a>. Questions or comments should be sent to willfreyman at gmail dot com.
 					</p>
-					<p style="font-size: 1.2em; line-height: 1.5; margin: 1em 0;">
-					This tool will calculate site inventory and transect FQAs. Any existing FQA database can be used or modified, and as new FQA databases are developed they can be uploaded.
-					Help expand this tool by uploading your region's list of species and their coefficients of conservatism.
+					<p>
+						Photo of <em>Sisyrinchium angustifolium</em> &copy; Lisa Culp. Used with permission.
 					</p>
-					<ul class="nav nav-pills">
-						<li class="active"><a href="php/login.php">Login / Register</a></li>
-					</ul>
 				</div>
 			</div>
 			<br><br><br><br><br><br><br><br><br>
