edited text and css

--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Universal Floristic Quality Assessment Tool</title>
+    <title>Universal Floristic Quality Assessment Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="/css/fqa.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="css/fqa.css" rel="stylesheet">
     
     <script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -21,11 +21,6 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
     	<div class="navbar-inner">
         	<div class="container">
-          		<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            		<span class="icon-bar"></span>
-            		<span class="icon-bar"></span>
-            		<span class="icon-bar"></span>
-          		</button>
           		<a class="brand" href="index.html">Universal FQA</a>
           		<div class="nav-collapse collapse pull-right">
             		<ul class="nav">
@@ -39,15 +34,15 @@
 		<div class="nice_margins">
 			<div class="row-fluid">
 				<div class="span3">
-					<img src="images/blue-eyed.jpg">
+					<img src="images/blue-eyed.jpg" class="img-rounded">
 				</div>
 				<div class="span9">
 					<h1>About this website</h1>
 					<br>
-					<p>
-						The <a href="index.html">Universal Floristic Quality Assessment Tool</a> is an open source project licensed for use under <a href="http://www.gnu.org/licenses/">GPLv3</a>. It is completely free for any user, and is being developed by <a href="http://breadorpyramid.org">Will Freyman</a> with support from <a href="http://openlands.org">Openlands</a>. Questions or comments should be sent to willfreyman at gmail dot com.
+					<p class="nice-text">
+						The <a href="index.html">Universal Floristic Quality Assessment Calculator</a> is an open source project licensed for use under <a href="http://www.gnu.org/licenses/">GPLv3</a>. It is completely free for any user, and is being developed by <a href="http://breadorpyramid.org">Will Freyman</a> with support from <a href="http://openlands.org">Openlands</a>. Questions or comments should be sent to willfreyman at gmail dot com.
 					</p>
-					<p>
+					<p class="nice-text">
 						Photo of <em>Sisyrinchium angustifolium</em> &copy; Lisa Culp. Used with permission.
 					</p>
 				</div>
