--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Universal Floristic Quality Assessment Tool</title>
+    <title>Universal Floristic Quality Assessment Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="/css/fqa.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="css/fqa.css" rel="stylesheet">
     
     <script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -40,15 +40,16 @@
 		<div class="nice_margins">
 			<div class="row-fluid">
 				<div class="span3">
-					<img src="images/blue-eyed.jpg">
+					<img src="images/blue-eyed.jpg" class="img-rounded">
 				</div>
 				<div class="span9">
-					<img src="images/header4.png">
-					<br><br><br><br><br>
-					<p style="font-size: 1.3em; line-height: 1.5; margin: 1em 0;">
+					<!-- <img src="images/header4.png"> -->
+					<h1>Universal FQA Calculator</h1>
+					<br><br>
+					<p class="nice-text">
 						Floristic Quality Assessments (FQAs) are a measurement of a natural area's habitat condition or quality.
 					</p>
-					<p style="font-size: 1.2em; line-height: 1.5; margin: 1em 0;">
+					<p class="nice-text">
 					This tool will calculate site inventory and transect FQAs. Any existing FQA database can be used or modified, and as new FQA databases are developed they can be uploaded.
 					Help expand this tool by uploading your region's list of species and their coefficients of conservatism.
 					</p>
