changed text on a number of pages

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 					This tool will calculate site inventory and transect FQAs. Any existing FQA database can be used or modified, and as new FQA databases are developed they can be uploaded.
 					Help expand this tool by uploading your region's list of species and their coefficients of conservatism.
 					</p>
-					<ul class="nav nav-pills">
-						<li class="active"><a href="php/login.php">Login / Register</a></li>
-					</ul>
+					<button class="btn btn-info" onclick="window.location='php/login.php';">Login / Register</button> 
 				</div>
 			</div>
 			<br><br><br><br><br><br><br><br><br>
