--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Universal Floristic Quality Assessment Calculator</title>
+    <title>Universal FQA Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -57,14 +57,14 @@
 					<button class="btn btn-info" onclick="window.location='php/login.php';">Login / Register</button> 
 				</div>
 			</div>
-			<br><br><br><br><br><br><br><br><br>
+			
 		</div>
-		<footer class="footer">
-			<div class="container">
-        		<p><a href="http://universalFQA.org">universalFQA.org</a> | <a href="about.html">About this site</a></p>
-      		</div>
-      	</footer>
     </div> 
-
+    <br><br><br><br><br><br><br><br><br>		
+	<footer class="footer">
+		<div class="container">
+			<p><a href="http://universalFQA.org">universalFQA.org</a> | <a href="about.html">About this site</a></p>
+		</div>
+	</footer>
   </body>
 </html>
