wireframes for inventory assessments and lots of cleanup

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 						The <a href="index.html">Universal Floristic Quality Assessment Calculator</a> is an open source project licensed for use under <a href="http://www.gnu.org/licenses/">GPLv3</a>. It is completely free for any user, and is being developed by <a href="http://breadorpyramid.org">Will Freyman</a> with support from <a href="http://openlands.org">Openlands</a>. Questions or comments should be sent to willfreyman at gmail dot com.
 					</p>
 					<p class="nice-text">
-						Photo of <em>Sisyrinchium angustifolium</em> &copy; Lisa Culp. Used with permission.
+						Photo of <em>Sisyrinchium angustifolium</em> &copy; <a href="http://www.flickr.com/photos/lc10s/">Lisa Culp</a>. Used with permission.
 					</p>
 				</div>
 			</div>
