minor changes and file reorganization

--- a/about.html
+++ b/about.html
@@ -46,6 +46,8 @@
 					<p class="nice-text">
 						Photo of <em>Sisyrinchium angustifolium</em> &copy; <a href="http://www.flickr.com/photos/lc10s/">Lisa Culp</a>. Used with permission.
 					</p>
+					<br>
+					<button class="btn btn-info" onclick="javascript: window.history.back();">OK</button>
 				</div>
 			</div>
 			<br><br><br><br><br><br><br><br><br>
